# pontia-prompt-entrega

./: README.md  main.ipynb  pyproject.toml  results.csv
