[project]
name = "prompt-engineering"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transformers>=5.0.0",
    "torch>=2.9.1",
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "accelerate>=1.12.0",
    "gliclass>=0.1.14",
    "instructor>=1.14.5",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
